--- a/week2_linreg/sem02-sklearn-linregr.ipynb
+++ b/week2_linreg/sem02-sklearn-linregr.ipynb
@@ -659,9 +659,14 @@
    "source": [
     "from sklearn.model_selection import cross_val_score\n",
     "\n",
-    "cv_scores = cross_val_score(model, X_train[numeric_features], y_train, cv=10, scoring=\"neg_root_mean_squared_error\")\n",
-    "print(\"Cross validation scores:\\n\\t\", \"\\n\\t\".join(\"%.4f\" % x for x in cv_scores))\n",
-    "print(\"Mean CV MSE = %.4f\" % np.mean(-cv_scores))"
+    "cv_scores = cross_val_score(model,\n",
+    "                            X_train[numeric_features],\n",
+    "                            y_train,\n",
+    "                            cv=10,\n",
+    "                            scoring=\"neg_root_mean_squared_error\")\n",
+    "print(\"Cross validation scores:\\n\\t\",\n",
+    "      \"\\n\\t\".join(\"%.4f\" % x for x in cv_scores))\n",
+    "print(\"Mean CV RMSE = %.4f\" % np.mean(-cv_scores))"
    ]
   },
   {
@@ -734,7 +739,8 @@
    "source": [
     "from sklearn.model_selection import cross_val_score\n",
     "\n",
-    "cv_scores = cross_val_score(model, X_train[numeric_features], y_train, cv=10, scoring=rmse_scorer)\n",
+    "cv_scores = cross_val_score(\n",
+    "    model, X_train[numeric_features], y_train, cv=10, scoring=rmse_scorer)\n",
     "print(\"Cross validation scores:\\n\\t\", \"\\n\\t\".join(\"%.4f\" % x for x in cv_scores))\n",
     "print(\"Mean CV RMSE = %.4f\" % np.mean(-cv_scores))"
    ]
@@ -764,10 +770,10 @@
    ],
    "source": [
     "best_constant = y_train.mean()\n",
-    "print(\"Test RMSE with best constant = %.4f\" % mean_squared_error(y_test, best_constant * np.ones(y_test.shape),\n",
-    "                                                                 squared=False))\n",
-    "print(\"Train RMSE with best constant = %.4f\" % mean_squared_error(y_train, best_constant * np.ones(y_train.shape),\n",
-    "                                                                  squared=False))"
+    "print(\"Test RMSE with best constant = %.4f\" % mean_squared_error(\n",
+    "    y_test, best_constant * np.ones(y_test.shape), squared=False))\n",
+    "print(\"Train RMSE with best constant = %.4f\" % mean_squared_error(\n",
+    "    y_train, best_constant * np.ones(y_train.shape), squared=False))"
    ]
   },
   {
@@ -944,7 +950,11 @@
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "alphas = np.logspace(-2, 3, 20)\n",
-    "searcher = GridSearchCV(Ridge(), [{\"alpha\": alphas}], scoring=\"neg_root_mean_squared_error\", cv=10)\n",
+    "searcher = GridSearchCV(Ridge(), [{\n",
+    "    \"alpha\": alphas\n",
+    "}],\n",
+    "                        scoring=\"neg_root_mean_squared_error\",\n",
+    "                        cv=10)\n",
     "searcher.fit(X_train_scaled, y_train)\n",
     "\n",
     "best_alpha = searcher.best_params_[\"alpha\"]\n",
@@ -2018,14 +2028,16 @@
     }
    ],
    "source": [
-    "f, (ax0, ax1) = plt.subplots(1, 2, sharey=True, figsize=(15,8))\n",
+    "f, (ax0, ax1) = plt.subplots(1, 2, sharey=True, figsize=(15, 8))\n",
     "\n",
     "regr = RidgeCV()\n",
     "regr.fit(X_train, y_train)\n",
     "y_pred = regr.predict(X_test)\n",
     "\n",
-    "print(\"Test MAE without target transformation = %.4f\" % mean_absolute_error(y_test, y_pred))\n",
-    "print(\"Test RMSE without target transformation = %.4f\" % mean_squared_error(y_test, y_pred, squared=False))\n",
+    "print(\"Test MAE without target transformation = %.4f\" %\n",
+    "      mean_absolute_error(y_test, y_pred))\n",
+    "print(\"Test RMSE without target transformation = %.4f\" %\n",
+    "      mean_squared_error(y_test, y_pred, squared=False))\n",
     "\n",
     "ax0.scatter(y_test, y_pred)\n",
     "ax0.plot([0, 10], [0, 10], '--k')\n",
@@ -2035,15 +2047,17 @@
     "ax0.set_xlim([0, 10])\n",
     "ax0.set_ylim([0, 10])\n",
     "\n",
-    "regr_trans = TransformedTargetRegressor(\n",
-    "    regressor=RidgeCV(),\n",
-    "    transformer=QuantileTransformer(n_quantiles=300,\n",
-    "                                    output_distribution='normal'))\n",
+    "regr_trans = TransformedTargetRegressor(regressor=RidgeCV(),\n",
+    "                                        transformer=QuantileTransformer(\n",
+    "                                            n_quantiles=300,\n",
+    "                                            output_distribution='normal'))\n",
     "regr_trans.fit(X_train, y_train)\n",
     "y_pred = regr_trans.predict(X_test)\n",
     "\n",
-    "print(\"Test MAE with target transformation = %.4f\" % mean_absolute_error(y_test, y_pred))\n",
-    "print(\"Test RMSE with target transformation = %.4f\" % mean_squared_error(y_test, y_pred, squared=False))\n",
+    "print(\"Test MAE with target transformation = %.4f\" %\n",
+    "      mean_absolute_error(y_test, y_pred))\n",
+    "print(\"Test RMSE with target transformation = %.4f\" %\n",
+    "      mean_squared_error(y_test, y_pred, squared=False))\n",
     "\n",
     "ax1.scatter(y_test, y_pred)\n",
     "ax1.plot([0, 10], [0, 10], '--k')\n",
