--- a/week5_lin-class/sem05_linclass.ipynb
+++ b/week5_lin-class/sem05_linclass.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -59,12 +59,12 @@
     "### Пример обучения логистической регрессии\n",
     "#### Определение спама по тексту электронного письма\n",
     "\n",
-    "Попробуем при помощи моделей линейной классификации построить алгоритм, отделяющий спам от нормальной почты. Для экспериментов воспользуемся небольшим набором данных с [UCI](https://archive.ics.uci.edu/ml/datasets.html). Объекты в датасете соответствуют письмам, которые описаны признаками на основе текста письма, спам — положительный пример для классификации, хорошее письмо — отрицательный пример."
+    "Попробуем при помощи моделей линейной классификации построить алгоритм, отделяющий спам от нормальной почты. Для экспериментов воспользуемся небольшим набором данных с [UCI](https://archive.ics.uci.edu/ml/datasets/spambase). Объекты в датасете соответствуют письмам, которые описаны признаками на основе текста письма, спам — положительный пример для классификации, хорошее письмо — отрицательный пример."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
        "[5 rows x 58 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,11 +317,393 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "X, y = spam_data.iloc[:, :-1].values, spam_data.iloc[:, -1].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4601, 58)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spam_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>word_freq_make</th>\n",
+       "      <th>word_freq_address</th>\n",
+       "      <th>word_freq_all</th>\n",
+       "      <th>word_freq_3d</th>\n",
+       "      <th>word_freq_our</th>\n",
+       "      <th>word_freq_over</th>\n",
+       "      <th>word_freq_remove</th>\n",
+       "      <th>word_freq_internet</th>\n",
+       "      <th>word_freq_order</th>\n",
+       "      <th>word_freq_mail</th>\n",
+       "      <th>...</th>\n",
+       "      <th>char_freq_;</th>\n",
+       "      <th>char_freq_(</th>\n",
+       "      <th>char_freq_[</th>\n",
+       "      <th>char_freq_!</th>\n",
+       "      <th>char_freq_$</th>\n",
+       "      <th>char_freq_#</th>\n",
+       "      <th>capital_run_length_average</th>\n",
+       "      <th>capital_run_length_longest</th>\n",
+       "      <th>capital_run_length_total</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>count</td>\n",
+       "      <td>4601.000000</td>\n",
+       "      <td>4601.000000</td>\n",
+       "      <td>4601.000000</td>\n",
+       "      <td>4601.000000</td>\n",
+       "      <td>4601.000000</td>\n",
+       "      <td>4601.000000</td>\n",
+       "      <td>4601.000000</td>\n",
+       "      <td>4601.000000</td>\n",
+       "      <td>4601.000000</td>\n",
+       "      <td>4601.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4601.000000</td>\n",
+       "      <td>4601.000000</td>\n",
+       "      <td>4601.000000</td>\n",
+       "      <td>4601.000000</td>\n",
+       "      <td>4601.000000</td>\n",
+       "      <td>4601.000000</td>\n",
+       "      <td>4601.000000</td>\n",
+       "      <td>4601.000000</td>\n",
+       "      <td>4601.000000</td>\n",
+       "      <td>4601.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>mean</td>\n",
+       "      <td>0.104553</td>\n",
+       "      <td>0.213015</td>\n",
+       "      <td>0.280656</td>\n",
+       "      <td>0.065425</td>\n",
+       "      <td>0.312223</td>\n",
+       "      <td>0.095901</td>\n",
+       "      <td>0.114208</td>\n",
+       "      <td>0.105295</td>\n",
+       "      <td>0.090067</td>\n",
+       "      <td>0.239413</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.038575</td>\n",
+       "      <td>0.139030</td>\n",
+       "      <td>0.016976</td>\n",
+       "      <td>0.269071</td>\n",
+       "      <td>0.075811</td>\n",
+       "      <td>0.044238</td>\n",
+       "      <td>5.191515</td>\n",
+       "      <td>52.172789</td>\n",
+       "      <td>283.289285</td>\n",
+       "      <td>0.394045</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>std</td>\n",
+       "      <td>0.305358</td>\n",
+       "      <td>1.290575</td>\n",
+       "      <td>0.504143</td>\n",
+       "      <td>1.395151</td>\n",
+       "      <td>0.672513</td>\n",
+       "      <td>0.273824</td>\n",
+       "      <td>0.391441</td>\n",
+       "      <td>0.401071</td>\n",
+       "      <td>0.278616</td>\n",
+       "      <td>0.644755</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.243471</td>\n",
+       "      <td>0.270355</td>\n",
+       "      <td>0.109394</td>\n",
+       "      <td>0.815672</td>\n",
+       "      <td>0.245882</td>\n",
+       "      <td>0.429342</td>\n",
+       "      <td>31.729449</td>\n",
+       "      <td>194.891310</td>\n",
+       "      <td>606.347851</td>\n",
+       "      <td>0.488698</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>min</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>25%</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.588000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>35.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>50%</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.065000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.276000</td>\n",
+       "      <td>15.000000</td>\n",
+       "      <td>95.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>75%</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.420000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.380000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.160000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.188000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.315000</td>\n",
+       "      <td>0.052000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.706000</td>\n",
+       "      <td>43.000000</td>\n",
+       "      <td>266.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>max</td>\n",
+       "      <td>4.540000</td>\n",
+       "      <td>14.280000</td>\n",
+       "      <td>5.100000</td>\n",
+       "      <td>42.810000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>5.880000</td>\n",
+       "      <td>7.270000</td>\n",
+       "      <td>11.110000</td>\n",
+       "      <td>5.260000</td>\n",
+       "      <td>18.180000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.385000</td>\n",
+       "      <td>9.752000</td>\n",
+       "      <td>4.081000</td>\n",
+       "      <td>32.478000</td>\n",
+       "      <td>6.003000</td>\n",
+       "      <td>19.829000</td>\n",
+       "      <td>1102.500000</td>\n",
+       "      <td>9989.000000</td>\n",
+       "      <td>15841.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8 rows × 58 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       word_freq_make  word_freq_address  word_freq_all  word_freq_3d  \\\n",
+       "count     4601.000000        4601.000000    4601.000000   4601.000000   \n",
+       "mean         0.104553           0.213015       0.280656      0.065425   \n",
+       "std          0.305358           1.290575       0.504143      1.395151   \n",
+       "min          0.000000           0.000000       0.000000      0.000000   \n",
+       "25%          0.000000           0.000000       0.000000      0.000000   \n",
+       "50%          0.000000           0.000000       0.000000      0.000000   \n",
+       "75%          0.000000           0.000000       0.420000      0.000000   \n",
+       "max          4.540000          14.280000       5.100000     42.810000   \n",
+       "\n",
+       "       word_freq_our  word_freq_over  word_freq_remove  word_freq_internet  \\\n",
+       "count    4601.000000     4601.000000       4601.000000         4601.000000   \n",
+       "mean        0.312223        0.095901          0.114208            0.105295   \n",
+       "std         0.672513        0.273824          0.391441            0.401071   \n",
+       "min         0.000000        0.000000          0.000000            0.000000   \n",
+       "25%         0.000000        0.000000          0.000000            0.000000   \n",
+       "50%         0.000000        0.000000          0.000000            0.000000   \n",
+       "75%         0.380000        0.000000          0.000000            0.000000   \n",
+       "max        10.000000        5.880000          7.270000           11.110000   \n",
+       "\n",
+       "       word_freq_order  word_freq_mail  ...  char_freq_;  char_freq_(  \\\n",
+       "count      4601.000000     4601.000000  ...  4601.000000  4601.000000   \n",
+       "mean          0.090067        0.239413  ...     0.038575     0.139030   \n",
+       "std           0.278616        0.644755  ...     0.243471     0.270355   \n",
+       "min           0.000000        0.000000  ...     0.000000     0.000000   \n",
+       "25%           0.000000        0.000000  ...     0.000000     0.000000   \n",
+       "50%           0.000000        0.000000  ...     0.000000     0.065000   \n",
+       "75%           0.000000        0.160000  ...     0.000000     0.188000   \n",
+       "max           5.260000       18.180000  ...     4.385000     9.752000   \n",
+       "\n",
+       "       char_freq_[  char_freq_!  char_freq_$  char_freq_#  \\\n",
+       "count  4601.000000  4601.000000  4601.000000  4601.000000   \n",
+       "mean      0.016976     0.269071     0.075811     0.044238   \n",
+       "std       0.109394     0.815672     0.245882     0.429342   \n",
+       "min       0.000000     0.000000     0.000000     0.000000   \n",
+       "25%       0.000000     0.000000     0.000000     0.000000   \n",
+       "50%       0.000000     0.000000     0.000000     0.000000   \n",
+       "75%       0.000000     0.315000     0.052000     0.000000   \n",
+       "max       4.081000    32.478000     6.003000    19.829000   \n",
+       "\n",
+       "       capital_run_length_average  capital_run_length_longest  \\\n",
+       "count                 4601.000000                 4601.000000   \n",
+       "mean                     5.191515                   52.172789   \n",
+       "std                     31.729449                  194.891310   \n",
+       "min                      1.000000                    1.000000   \n",
+       "25%                      1.588000                    6.000000   \n",
+       "50%                      2.276000                   15.000000   \n",
+       "75%                      3.706000                   43.000000   \n",
+       "max                   1102.500000                 9989.000000   \n",
+       "\n",
+       "       capital_run_length_total        class  \n",
+       "count               4601.000000  4601.000000  \n",
+       "mean                 283.289285     0.394045  \n",
+       "std                  606.347851     0.488698  \n",
+       "min                    1.000000     0.000000  \n",
+       "25%                   35.000000     0.000000  \n",
+       "50%                   95.000000     0.000000  \n",
+       "75%                  266.000000     1.000000  \n",
+       "max                15841.000000     1.000000  \n",
+       "\n",
+       "[8 rows x 58 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spam_data.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spam_data.isna().sum().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    0.605955\n",
+       "1    0.394045\n",
+       "Name: class, dtype: float64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spam_data['class'].value_counts(normalize=True)"
    ]
   },
   {
@@ -1884,6 +2266,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.6"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
